IFORUM

ImpressCMS bulletin Board, for ImpressCMS >= 1.2

iforum, is fork of newbb (aka CBB), at this stage it just has some minor changes to work efficient with ImpressCMS >= 1.1 
We will have a total code re-writing at a later stage!

Changelog 1.0 RC2
=============
1 Bugfix: for allowed editors in ICMS 1.1
2 added: _MD_UP on language/english/main.php (sato-san)
3 added: _MD_POSTTIME on language/english/main.php (sato-san)
4 added: German files with UTF-8  (sato-san)
5 Bugfix: for fast-reply in IE (McDonald)
6 Bugfix: for newbb_rtl.css
7 Bugfix: date&time.
8 added: the module create the upload-folders automatically (sato-san)
9 added: Spanish files with UTF-8  (juancj)
10 added: Portuguesebr files with UTF-8  (Gibaphp)
11 added: French files with UTF-8  (FaYsSaL)
12 added: Russian files with UTF-8  (algalochkin)
13 Bugfix: PDF issues
14 Improved: &newbb_displayTarea (to use icms purifier)
15 added: smarty modulename (in blocks)
16 issues with RTL
17 Bugfix: if no editor is allowed, the form will disappear
18 Bugfix: with FCKEDITOR paths
19 Bugfix: xoopseditor path changed to editors
20 Bugfix: need for xoops_local
21 added: div class="comUserImg for avatars (Knallkopp_02)
22 Finished Implementing easy-renaming

Changelog 1.0 RC
Nov 6th, 2008 
=============
1 Bugfix for user signatures in ICMS 1.1
2 Added Built in RTL support
3 Removed need to have frameworks
4 Implemented (partly, it is not finished yet) easy-renaming
5 Changed PDF generator to TCPDF for UTF-8 languages
6 Added xoops-magazine image set as default
7 New icons (thanks McDonald And http://dryicons.com/)
