@@ -506,4 +506,5 @@ define('_PDF_TOPIC','Hilo');
 define('_PDF_DATE','Fecha'); 
 define('_MD_UP','Top');
 define('_MD_POSTTIME','Date');
+define('_MD_EXTRAS','extras');
 ?>
