@@ -37,7 +37,7 @@
 				<{$topic_post.poster.regdate}>
 
   				<{if $topic_post.poster.from}>
-  				| <span class="comUserStatCaption"><{$smarty.const._MD_FROM}></span> <a href="http://wikipedia.org/wiki/<{$topic_post.poster.from}>" rel="external"><{$topic_post.poster.from}></a>
+  				| <span class="comUserStatCaption"><{$smarty.const._MD_FROM}>:</span> <a href="http://<{$icms_langcode}>.wikipedia.org/wiki/<{$topic_post.poster.from}>" rel="external"><{$topic_post.poster.from}></a>
   				<{/if}>	
 
   				| <span class="comUserStatCaption"><{$smarty.const._MD_POSTS}>:</span> 
